--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Realtime Image Identification (for family)</title>
+  <title>Realtime Image Recognition Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -11,7 +11,7 @@
 </head>
 <body background="17970408-doodle-family-element.jpg">
 <center>
-  <h3 class="btn btn-danger div1">Realtime Image Identification (for family)
+  <h4 class="btn btn-danger div1">Realtime Image Recognition Project
     <hr>
   <center>
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 div2">
@@ -22,8 +22,17 @@
       </div>
     </div>
   </center>
-  <br><br> 
+  <br>
+  </h4>
+  <br> 
+  <p class="btn btn-info para col-lg-6 col-md-6 col-sm-6 col-xs-12">Image:
+    <span id="result_image_name"></span>
+  </p>
+  <p class="btn btn-info para col-lg-6 col-md-6 col-sm-6 col-xs-12">Accuracy:
+    <span id="result_image_accuracy"></span>
+  </p>
 </center>
+<div class="copyright_footer">Developed by Arnav Barik(student of Whitehatjr.)</div>
 <script src="main.js"></script>
 </body>
 </html>
